P3/y.output
Terminales no usados en la gramática

    OPUNARIO


Estado 146 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: MAIN PARIZQ PARDER bloque

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    3 declar_de_subprogs: declar_de_subprogs declar_subprog
    4                   | %empty

    5 declar_subprog: cabecera_subprog bloque

    6 declar_de_variables_locales: VAR INICIOBLOQUE variables_locales FINBLOQUE
    7                            | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: tipo lista_variables PYC
   11                        | error

   12 tipo: PRIMITIVO
   13     | ESTRUCTURA tipo

   14 lista_variables: ID COMA lista_variables
   15                | ID

   16 cabecera_subprog: tipo ID PARIZQ parametros PARDER

   17 lista_expresiones: lista_expresiones COMA expresion
   18                  | expresion

   19 parametros: parametros COMA tipo ID
   20           | tipo ID

   21 sentencias: sentencias sentencia
   22           | %empty

   23 sentencia: bloque
   24          | sentencia_asignacion
   25          | sentencia_if
   26          | sentencia_while
   27          | sentencia_entrada
   28          | sentencia_salida
   29          | sentencia_return
   30          | sentencia_repeat_until
   31          | sentencia_lista

   32 sentencia_asignacion: ID ASIGN expresion PYC

   33 sentencia_if: IF PARIZQ expresion PARDER sentencia sentencia_else

   34 sentencia_else: ELSE sentencia
   35               | %empty

   36 sentencia_while: WHILE PARIZQ expresion PARDER sentencia

   37 sentencia_entrada: INPUT lista_id PYC

   38 lista_id: lista_id COMA ID
   39         | ID

   40 sentencia_salida: OUTPUT lista_expresion_cadena PYC

   41 lista_expresion_cadena: lista_expresion_cadena COMA expresion_cadena
   42                       | expresion_cadena

   43 expresion_cadena: expresion
   44                 | CADENA

   45 sentencia_return: RETURN expresion PYC

   46 sentencia_repeat_until: REPEAT sentencia UNTIL PARIZQ expresion PARDER PYC

   47 sentencia_lista: expresion OPERLISTA PYC
   48                | INT expresion PYC
   49                | DOLLAR expresion PYC

   50 expresion: PARIZQ expresion PARDER
   51          | MASMENOS expresion
   52          | BAR expresion
   53          | NOT expresion
   54          | INT expresion
   55          | MENOSMENOS expresion
   56          | expresion MENOSMENOS expresion
   57          | expresion ORLOG expresion
   58          | expresion ANDLOG expresion
   59          | expresion ARROBA expresion
   60          | expresion XOR expresion
   61          | expresion REL expresion
   62          | expresion MASMENOS expresion
   63          | expresion PORPOR expresion
   64          | expresion PORPOT expresion
   65          | expresion MULDIV expresion
   66          | expresion EQN expresion
   67          | expresion OPERMASMAS expresion ARROBA expresion
   68          | ID
   69          | constante
   70          | funcion

   71 funcion: ID PARIZQ argumentos PARDER

   72 argumentos: lista_expresiones
   73           | %empty

   74 constante: CONSTANTE
   75          | lista

   76 lista: CORCHETEIZQ lista_expresiones CORCHETEDER
   77      | CORCHETEIZQ CORCHETEDER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 11
    MAIN (258) 1
    VAR (259) 6
    PRIMITIVO (260) 12
    PYC (261) 10 32 37 40 45 46 47 48 49
    INPUT (262) 37
    OUTPUT (263) 40
    CADENA (264) 44
    RETURN (265) 45
    IF (266) 33
    ELSE (267) 34
    REPEAT (268) 46
    UNTIL (269) 46
    WHILE (270) 36
    OPERLISTA (271) 47
    CONSTANTE (272) 74
    INICIOBLOQUE (273) 2 6
    FINBLOQUE (274) 2 6
    CORCHETEIZQ (275) 76 77
    CORCHETEDER (276) 76 77
    COMA (277) 14 17 19 38 41
    ASIGN (278) 32
    PARDER (279) 1 16 33 36 46 50 71
    PARIZQ (280) 1 16 33 36 46 50 71
    OPUNARIO (281)
    ESTRUCTURA (282) 13
    ID (283) 14 15 16 19 20 32 38 39 68 71
    OPERMASMAS (284) 67
    ARROBA (285) 59 67
    ORLOG (286) 57
    ANDLOG (287) 58
    XOR (288) 60
    EQN (289) 66
    REL (290) 61
    PORPOR (291) 63
    PORPOT (292) 64
    MASMENOS (293) 51 62
    MULDIV (294) 65
    MENOSMENOS (295) 55 56
    INT (296) 48 54
    BAR (297) 52
    DOLLAR (298) 49
    NOT (299) 53


No terminales con las reglas donde aparecen

    $accept (45)
        on left: 0
    programa (46)
        on left: 1
        on right: 0
    bloque (47)
        on left: 2
        on right: 1 5 23
    declar_de_subprogs (48)
        on left: 3 4
        on right: 2 3
    declar_subprog (49)
        on left: 5
        on right: 3
    declar_de_variables_locales (50)
        on left: 6 7
        on right: 2
    variables_locales (51)
        on left: 8 9
        on right: 6 8
    cuerpo_declar_variables (52)
        on left: 10 11
        on right: 8 9
    tipo (53)
        on left: 12 13
        on right: 10 13 16 19 20
    lista_variables (54)
        on left: 14 15
        on right: 10 14
    cabecera_subprog (55)
        on left: 16
        on right: 5
    lista_expresiones (56)
        on left: 17 18
        on right: 17 72 76
    parametros (57)
        on left: 19 20
        on right: 16 19
    sentencias (58)
        on left: 21 22
        on right: 2 21
    sentencia (59)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 21 33 34 36 46
    sentencia_asignacion (60)
        on left: 32
        on right: 24
    sentencia_if (61)
        on left: 33
        on right: 25
    sentencia_else (62)
        on left: 34 35
        on right: 33
    sentencia_while (63)
        on left: 36
        on right: 26
    sentencia_entrada (64)
        on left: 37
        on right: 27
    lista_id (65)
        on left: 38 39
        on right: 37 38
    sentencia_salida (66)
        on left: 40
        on right: 28
    lista_expresion_cadena (67)
        on left: 41 42
        on right: 40 41
    expresion_cadena (68)
        on left: 43 44
        on right: 41 42
    sentencia_return (69)
        on left: 45
        on right: 29
    sentencia_repeat_until (70)
        on left: 46
        on right: 30
    sentencia_lista (71)
        on left: 47 48 49
        on right: 31
    expresion (72)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 17 18 32 33 36 43 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    funcion (73)
        on left: 71
        on right: 70
    argumentos (74)
        on left: 72 73
        on right: 71
    constante (75)
        on left: 74 75
        on right: 69
    lista (76)
        on left: 76 77
        on right: 75


Estado 0

    0 $accept: . programa $end

    MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: MAIN . PARIZQ PARDER bloque

    PARIZQ  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: MAIN PARIZQ . PARDER bloque

    PARDER  desplazar e ir al estado 5


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    1 programa: MAIN PARIZQ PARDER . bloque

    INICIOBLOQUE  desplazar e ir al estado 6

    bloque  ir al estado 7


Estado 6

    2 bloque: INICIOBLOQUE . declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE

    VAR  desplazar e ir al estado 8

    $default  reduce usando la regla 7 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 9


Estado 7

    1 programa: MAIN PARIZQ PARDER bloque .

    $default  reduce usando la regla 1 (programa)


Estado 8

    6 declar_de_variables_locales: VAR . INICIOBLOQUE variables_locales FINBLOQUE

    INICIOBLOQUE  desplazar e ir al estado 10


Estado 9

    2 bloque: INICIOBLOQUE declar_de_variables_locales . declar_de_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 4 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 11


Estado 10

    6 declar_de_variables_locales: VAR INICIOBLOQUE . variables_locales FINBLOQUE

    error       desplazar e ir al estado 12
    PRIMITIVO   desplazar e ir al estado 13
    ESTRUCTURA  desplazar e ir al estado 14

    variables_locales        ir al estado 15
    cuerpo_declar_variables  ir al estado 16
    tipo                     ir al estado 17


Estado 11

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs . sentencias FINBLOQUE
    3 declar_de_subprogs: declar_de_subprogs . declar_subprog

    PRIMITIVO   desplazar e ir al estado 13
    ESTRUCTURA  desplazar e ir al estado 14

    $default  reduce usando la regla 22 (sentencias)

    declar_subprog    ir al estado 18
    tipo              ir al estado 19
    cabecera_subprog  ir al estado 20
    sentencias        ir al estado 21


Estado 12

   11 cuerpo_declar_variables: error .

    $default  reduce usando la regla 11 (cuerpo_declar_variables)


Estado 13

   12 tipo: PRIMITIVO .

    $default  reduce usando la regla 12 (tipo)


Estado 14

   13 tipo: ESTRUCTURA . tipo

    PRIMITIVO   desplazar e ir al estado 13
    ESTRUCTURA  desplazar e ir al estado 14

    tipo  ir al estado 22


Estado 15

    6 declar_de_variables_locales: VAR INICIOBLOQUE variables_locales . FINBLOQUE
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 12
    PRIMITIVO   desplazar e ir al estado 13
    FINBLOQUE   desplazar e ir al estado 23
    ESTRUCTURA  desplazar e ir al estado 14

    cuerpo_declar_variables  ir al estado 24
    tipo                     ir al estado 17


Estado 16

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 9 (variables_locales)


Estado 17

   10 cuerpo_declar_variables: tipo . lista_variables PYC

    ID  desplazar e ir al estado 25

    lista_variables  ir al estado 26


Estado 18

    3 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce usando la regla 3 (declar_de_subprogs)


Estado 19

   16 cabecera_subprog: tipo . ID PARIZQ parametros PARDER

    ID  desplazar e ir al estado 27


Estado 20

    5 declar_subprog: cabecera_subprog . bloque

    INICIOBLOQUE  desplazar e ir al estado 6

    bloque  ir al estado 28


Estado 21

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs sentencias . FINBLOQUE
   21 sentencias: sentencias . sentencia

    INPUT         desplazar e ir al estado 29
    OUTPUT        desplazar e ir al estado 30
    RETURN        desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    REPEAT        desplazar e ir al estado 33
    WHILE         desplazar e ir al estado 34
    CONSTANTE     desplazar e ir al estado 35
    INICIOBLOQUE  desplazar e ir al estado 6
    FINBLOQUE     desplazar e ir al estado 36
    CORCHETEIZQ   desplazar e ir al estado 37
    PARIZQ        desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    MASMENOS      desplazar e ir al estado 40
    MENOSMENOS    desplazar e ir al estado 41
    INT           desplazar e ir al estado 42
    BAR           desplazar e ir al estado 43
    DOLLAR        desplazar e ir al estado 44
    NOT           desplazar e ir al estado 45

    bloque                  ir al estado 46
    sentencia               ir al estado 47
    sentencia_asignacion    ir al estado 48
    sentencia_if            ir al estado 49
    sentencia_while         ir al estado 50
    sentencia_entrada       ir al estado 51
    sentencia_salida        ir al estado 52
    sentencia_return        ir al estado 53
    sentencia_repeat_until  ir al estado 54
    sentencia_lista         ir al estado 55
    expresion               ir al estado 56
    funcion                 ir al estado 57
    constante               ir al estado 58
    lista                   ir al estado 59


Estado 22

   13 tipo: ESTRUCTURA tipo .

    $default  reduce usando la regla 13 (tipo)


Estado 23

    6 declar_de_variables_locales: VAR INICIOBLOQUE variables_locales FINBLOQUE .

    $default  reduce usando la regla 6 (declar_de_variables_locales)


Estado 24

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 8 (variables_locales)


Estado 25

   14 lista_variables: ID . COMA lista_variables
   15                | ID .

    COMA  desplazar e ir al estado 60

    $default  reduce usando la regla 15 (lista_variables)


Estado 26

   10 cuerpo_declar_variables: tipo lista_variables . PYC

    PYC  desplazar e ir al estado 61


Estado 27

   16 cabecera_subprog: tipo ID . PARIZQ parametros PARDER

    PARIZQ  desplazar e ir al estado 62


Estado 28

    5 declar_subprog: cabecera_subprog bloque .

    $default  reduce usando la regla 5 (declar_subprog)


Estado 29

   37 sentencia_entrada: INPUT . lista_id PYC

    ID  desplazar e ir al estado 63

    lista_id  ir al estado 64


Estado 30

   40 sentencia_salida: OUTPUT . lista_expresion_cadena PYC

    CADENA       desplazar e ir al estado 65
    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    lista_expresion_cadena  ir al estado 68
    expresion_cadena        ir al estado 69
    expresion               ir al estado 70
    funcion                 ir al estado 57
    constante               ir al estado 58
    lista                   ir al estado 59


Estado 31

   45 sentencia_return: RETURN . expresion PYC

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 71
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 32

   33 sentencia_if: IF . PARIZQ expresion PARDER sentencia sentencia_else

    PARIZQ  desplazar e ir al estado 72


Estado 33

   46 sentencia_repeat_until: REPEAT . sentencia UNTIL PARIZQ expresion PARDER PYC

    INPUT         desplazar e ir al estado 29
    OUTPUT        desplazar e ir al estado 30
    RETURN        desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    REPEAT        desplazar e ir al estado 33
    WHILE         desplazar e ir al estado 34
    CONSTANTE     desplazar e ir al estado 35
    INICIOBLOQUE  desplazar e ir al estado 6
    CORCHETEIZQ   desplazar e ir al estado 37
    PARIZQ        desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    MASMENOS      desplazar e ir al estado 40
    MENOSMENOS    desplazar e ir al estado 41
    INT           desplazar e ir al estado 42
    BAR           desplazar e ir al estado 43
    DOLLAR        desplazar e ir al estado 44
    NOT           desplazar e ir al estado 45

    bloque                  ir al estado 46
    sentencia               ir al estado 73
    sentencia_asignacion    ir al estado 48
    sentencia_if            ir al estado 49
    sentencia_while         ir al estado 50
    sentencia_entrada       ir al estado 51
    sentencia_salida        ir al estado 52
    sentencia_return        ir al estado 53
    sentencia_repeat_until  ir al estado 54
    sentencia_lista         ir al estado 55
    expresion               ir al estado 56
    funcion                 ir al estado 57
    constante               ir al estado 58
    lista                   ir al estado 59


Estado 34

   36 sentencia_while: WHILE . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 74


Estado 35

   74 constante: CONSTANTE .

    $default  reduce usando la regla 74 (constante)


Estado 36

    2 bloque: INICIOBLOQUE declar_de_variables_locales declar_de_subprogs sentencias FINBLOQUE .

    $default  reduce usando la regla 2 (bloque)


Estado 37

   76 lista: CORCHETEIZQ . lista_expresiones CORCHETEDER
   77      | CORCHETEIZQ . CORCHETEDER

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    CORCHETEDER  desplazar e ir al estado 75
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    lista_expresiones  ir al estado 76
    expresion          ir al estado 77
    funcion            ir al estado 57
    constante          ir al estado 58
    lista              ir al estado 59


Estado 38

   50 expresion: PARIZQ . expresion PARDER

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 78
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 39

   32 sentencia_asignacion: ID . ASIGN expresion PYC
   68 expresion: ID .
   71 funcion: ID . PARIZQ argumentos PARDER

    ASIGN   desplazar e ir al estado 79
    PARIZQ  desplazar e ir al estado 80

    $default  reduce usando la regla 68 (expresion)


Estado 40

   51 expresion: MASMENOS . expresion

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 81
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 41

   55 expresion: MENOSMENOS . expresion

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 82
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 42

   48 sentencia_lista: INT . expresion PYC
   54 expresion: INT . expresion

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 83
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 43

   52 expresion: BAR . expresion

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 84
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 44

   49 sentencia_lista: DOLLAR . expresion PYC

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 85
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 45

   53 expresion: NOT . expresion

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 86
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 46

   23 sentencia: bloque .

    $default  reduce usando la regla 23 (sentencia)


Estado 47

   21 sentencias: sentencias sentencia .

    $default  reduce usando la regla 21 (sentencias)


Estado 48

   24 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 24 (sentencia)


Estado 49

   25 sentencia: sentencia_if .

    $default  reduce usando la regla 25 (sentencia)


Estado 50

   26 sentencia: sentencia_while .

    $default  reduce usando la regla 26 (sentencia)


Estado 51

   27 sentencia: sentencia_entrada .

    $default  reduce usando la regla 27 (sentencia)


Estado 52

   28 sentencia: sentencia_salida .

    $default  reduce usando la regla 28 (sentencia)


Estado 53

   29 sentencia: sentencia_return .

    $default  reduce usando la regla 29 (sentencia)


Estado 54

   30 sentencia: sentencia_repeat_until .

    $default  reduce usando la regla 30 (sentencia)


Estado 55

   31 sentencia: sentencia_lista .

    $default  reduce usando la regla 31 (sentencia)


Estado 56

   47 sentencia_lista: expresion . OPERLISTA PYC
   56 expresion: expresion . MENOSMENOS expresion
   57          | expresion . ORLOG expresion
   58          | expresion . ANDLOG expresion
   59          | expresion . ARROBA expresion
   60          | expresion . XOR expresion
   61          | expresion . REL expresion
   62          | expresion . MASMENOS expresion
   63          | expresion . PORPOR expresion
   64          | expresion . PORPOT expresion
   65          | expresion . MULDIV expresion
   66          | expresion . EQN expresion
   67          | expresion . OPERMASMAS expresion ARROBA expresion

    OPERLISTA   desplazar e ir al estado 87
    OPERMASMAS  desplazar e ir al estado 88
    ARROBA      desplazar e ir al estado 89
    ORLOG       desplazar e ir al estado 90
    ANDLOG      desplazar e ir al estado 91
    XOR         desplazar e ir al estado 92
    EQN         desplazar e ir al estado 93
    REL         desplazar e ir al estado 94
    PORPOR      desplazar e ir al estado 95
    PORPOT      desplazar e ir al estado 96
    MASMENOS    desplazar e ir al estado 97
    MULDIV      desplazar e ir al estado 98
    MENOSMENOS  desplazar e ir al estado 99


Estado 57

   70 expresion: funcion .

    $default  reduce usando la regla 70 (expresion)


Estado 58

   69 expresion: constante .

    $default  reduce usando la regla 69 (expresion)


Estado 59

   75 constante: lista .

    $default  reduce usando la regla 75 (constante)


Estado 60

   14 lista_variables: ID COMA . lista_variables

    ID  desplazar e ir al estado 25

    lista_variables  ir al estado 100


Estado 61

   10 cuerpo_declar_variables: tipo lista_variables PYC .

    $default  reduce usando la regla 10 (cuerpo_declar_variables)


Estado 62

   16 cabecera_subprog: tipo ID PARIZQ . parametros PARDER

    PRIMITIVO   desplazar e ir al estado 13
    ESTRUCTURA  desplazar e ir al estado 14

    tipo        ir al estado 101
    parametros  ir al estado 102


Estado 63

   39 lista_id: ID .

    $default  reduce usando la regla 39 (lista_id)


Estado 64

   37 sentencia_entrada: INPUT lista_id . PYC
   38 lista_id: lista_id . COMA ID

    PYC   desplazar e ir al estado 103
    COMA  desplazar e ir al estado 104


Estado 65

   44 expresion_cadena: CADENA .

    $default  reduce usando la regla 44 (expresion_cadena)


Estado 66

   68 expresion: ID .
   71 funcion: ID . PARIZQ argumentos PARDER

    PARIZQ  desplazar e ir al estado 80

    $default  reduce usando la regla 68 (expresion)


Estado 67

   54 expresion: INT . expresion

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 105
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 68

   40 sentencia_salida: OUTPUT lista_expresion_cadena . PYC
   41 lista_expresion_cadena: lista_expresion_cadena . COMA expresion_cadena

    PYC   desplazar e ir al estado 106
    COMA  desplazar e ir al estado 107


Estado 69

   42 lista_expresion_cadena: expresion_cadena .

    $default  reduce usando la regla 42 (lista_expresion_cadena)


Estado 70

   43 expresion_cadena: expresion .
   56 expresion: expresion . MENOSMENOS expresion
   57          | expresion . ORLOG expresion
   58          | expresion . ANDLOG expresion
   59          | expresion . ARROBA expresion
   60          | expresion . XOR expresion
   61          | expresion . REL expresion
   62          | expresion . MASMENOS expresion
   63          | expresion . PORPOR expresion
   64          | expresion . PORPOT expresion
   65          | expresion . MULDIV expresion
   66          | expresion . EQN expresion
   67          | expresion . OPERMASMAS expresion ARROBA expresion

    OPERMASMAS  desplazar e ir al estado 88
    ARROBA      desplazar e ir al estado 89
    ORLOG       desplazar e ir al estado 90
    ANDLOG      desplazar e ir al estado 91
    XOR         desplazar e ir al estado 92
    EQN         desplazar e ir al estado 93
    REL         desplazar e ir al estado 94
    PORPOR      desplazar e ir al estado 95
    PORPOT      desplazar e ir al estado 96
    MASMENOS    desplazar e ir al estado 97
    MULDIV      desplazar e ir al estado 98
    MENOSMENOS  desplazar e ir al estado 99

    $default  reduce usando la regla 43 (expresion_cadena)


Estado 71

   45 sentencia_return: RETURN expresion . PYC
   56 expresion: expresion . MENOSMENOS expresion
   57          | expresion . ORLOG expresion
   58          | expresion . ANDLOG expresion
   59          | expresion . ARROBA expresion
   60          | expresion . XOR expresion
   61          | expresion . REL expresion
   62          | expresion . MASMENOS expresion
   63          | expresion . PORPOR expresion
   64          | expresion . PORPOT expresion
   65          | expresion . MULDIV expresion
   66          | expresion . EQN expresion
   67          | expresion . OPERMASMAS expresion ARROBA expresion

    PYC         desplazar e ir al estado 108
    OPERMASMAS  desplazar e ir al estado 88
    ARROBA      desplazar e ir al estado 89
    ORLOG       desplazar e ir al estado 90
    ANDLOG      desplazar e ir al estado 91
    XOR         desplazar e ir al estado 92
    EQN         desplazar e ir al estado 93
    REL         desplazar e ir al estado 94
    PORPOR      desplazar e ir al estado 95
    PORPOT      desplazar e ir al estado 96
    MASMENOS    desplazar e ir al estado 97
    MULDIV      desplazar e ir al estado 98
    MENOSMENOS  desplazar e ir al estado 99


Estado 72

   33 sentencia_if: IF PARIZQ . expresion PARDER sentencia sentencia_else

    CONSTANTE    desplazar e ir al estado 35
    CORCHETEIZQ  desplazar e ir al estado 37
    PARIZQ       desplazar e ir al estado 38
    ID           desplazar e ir al estado 66
    MASMENOS     desplazar e ir al estado 40
    MENOSMENOS   desplazar e ir al estado 41
    INT          desplazar e ir al estado 67
    BAR          desplazar e ir al estado 43
    NOT          desplazar e ir al estado 45

    expresion  ir al estado 109
    funcion    ir al estado 57
    constante  ir al estado 58
    lista      ir al estado 59


Estado 73

   46 sentencia_repeat_until: REPEAT sentencia . UNTIL PARIZQ expresion PARDER PYC

    UNTIL  desplazar e ir al estado 110


Estado 74

   36 sentencia_while: WHILE PARIZQ . expresion PARDER sentencia
